--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <label for="password">Confirm Password</label>
                 <input 
                     type="password" 
-                    id="password"
-                    name="password"
+                    id="confirm-password"
+                    name="confirm-password"
                     required 
                     minlength="8" 
                     pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).{8,}"
