--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2025 | Responsive Login | Agrinya Owokoni David</p>
+        <p>&copy; 2025 | SignUp Page | Agrinya Owokoni David</p>
     </footer>
 </body>
 
